Fixed CSS (you're doing great)

--- a/src/containers/Books/Books.module.scss
+++ b/src/containers/Books/Books.module.scss
@@ -63,7 +63,9 @@
 .btn {
   cursor: pointer;
   outline: none;
-  border: none;
+  @media (min-width: 786px) {
+    border: none;
+  }
 }
 
 .loaderContainer,
