--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -4,3 +4,6 @@ $lightGrey: #f0f0f6;
 $grey: #a0a0a0;
 $darkGrey: #333333;
 $white: white;
+
+$regular: "Montserrat-Regular";
+$semiBold: "Montserrat-SemiBold";
