--- a/src/components/Book/Book.module.scss
+++ b/src/components/Book/Book.module.scss
@@ -1,3 +1,5 @@
+@import "../../styles/variables.scss";
+
 .root {
   display: flex;
   flex-direction: column;
@@ -16,12 +18,15 @@
   border-radius: 8px;
 }
 
+.title,
+.author {
+  font-family: $regular;
+  font-size: 12px;
+}
 .title {
-  font-size: 13px;
   font-weight: 700;
 }
 
 .author {
-  font-size: 13px;
   font-weight: 200;
 }
