--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -4,6 +4,8 @@
   height: 100vh;
   width: 100vw;
   background-color: $lightBlue !important;
+  font-family: $regular;
+  font-size: 16px;
 }
 
 .child {
