--- a/src/containers/Books/Books.module.scss
+++ b/src/containers/Books/Books.module.scss
@@ -65,10 +65,9 @@
 
 .btn {
   cursor: pointer;
-  outline: none;
-  @media (min-width: 786px) {
-    border: none;
-  }
+  outline: 0;
+  border: 0;
+  -webkit-appearance: none;
 }
 
 .loaderContainer,
@@ -100,4 +99,7 @@
 
 .infiniteLoad {
   margin-top: 200px;
+  @media (max-width: 786px) {
+    margin-top: 50px;
+  }
 }
