--- a/src/containers/Books/Books.module.scss
+++ b/src/containers/Books/Books.module.scss
@@ -53,6 +53,9 @@
 .catagoryContainer {
   display: flex;
   width: 60%;
+  @media (max-width: 568px) {
+    width: 80%;
+  }
 }
 
 .catagory {
@@ -68,6 +71,7 @@
   outline: 0;
   border: 0;
   background-color: white;
+  display: flex;
 }
 
 .loaderContainer,
